# NumericsLibrary

./: .gitignore  CMakeLists.txt  README.md  main.cpp
delaunay/: delaunay.cpp  delaunay.h
parser/: objparser.cpp  objparser.h
tests/: CMakeLists.txt  test_main.cpp
